Switch to using "Awaiting Upload" in prep for true pending flights support.

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -281,7 +281,7 @@
     <string name="txtRepeatFlightComplete">Le vol a été créé. Vous pouvez le modifier dans les vols récents.</string>
     <string name="txtSuccess">Succès</string>
     <string name="txtSavedFlight">Votre vol a été enregistré sur MyFlightbook.com</string>
-    <string name="txtPending"> (EN COURS)</string>
+    <string name="txtAwaitingUpload">En attente de téléchargement</string>
 
     <string name="txtError">Errreur</string>
     <string name="errMainDBFailure">Impossible de créer/copier base de données principale - l\'application ne fonctionnera pas!</string>
