--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -282,6 +282,7 @@
     <string name="txtSuccess">Succès</string>
     <string name="txtSavedFlight">Votre vol a été enregistré sur MyFlightbook.com</string>
     <string name="txtAwaitingUpload">En attente de téléchargement</string>
+    <string name="txtPendingAddition"> (VOL EN ATTENTE)</string>
 
     <string name="txtError">Errreur</string>
     <string name="errMainDBFailure">Impossible de créer/copier base de données principale - l\'application ne fonctionnera pas!</string>
@@ -352,6 +353,8 @@
     <string name="menuAddFlight">Ajouter un vol</string>
     <string name="menuAddFlightLaterShort">Ajouter plus tard</string>
     <string name="menuAddFlightLater">Ajouter plus tard</string>
+    <string name="menuSavePending">Enregistrer en tant que vol en attente</string>
+    <string name="menuSavePendingShort">Ajouter en attente</string>
     <string name="menuRepeatFlight">Répétez ce vol</string>
     <string name="menuRepeatReverseFlight">Répétez et inversez ce vol</string>
     <string name="menuRepeatShort">Répétez</string>
