--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -137,7 +137,7 @@
         <item>Quels étaient les quatre derniers chiffres de votre numéro de téléphone quand vous étiez enfant ?</item>
         <item>Dans quelle ville étiez-vous le 31 décembre 1999 ?</item>
         <item>Quel était le nom de votre professeur en CM1 ?</item>
-        <item>Où étiez-vous quand vous avez bu de l'alcool pour la première fois ?</item>
+        <item>Où étiez-vous quand vous avez bu de l\'alcool pour la première fois ?</item>
         <item>Quelle était la mascotte de votre école ?</item>
         <item>Quelle était la marque de votre première voiture ?</item>
         <item>Qui était votre héros d\'enfance ?</item>
@@ -160,7 +160,7 @@
     <string name="lblFollowTwitter">Twitter</string>
     <string name="lblWarning1">L\'UTILISATION EN VOL POURRAIT CONSTITUER UNE INFRACTION ET CAUSER UNE DISTRACTION. VOUS ÊTES RESPONSABLE DES CONSÉQUENCES DE VOS ACTIONS. VÉRIFIEZ LA RÉGLEMENTATION APPLICABLE</string>
     <string name="lblWarning2">L\'utilisation en vol pourrait constituer une infraction et causer une distraction. Vous êtes responsable des conséquences de vos actions. vérifiez la réglementation applicable</string>
-    <string name="lblGPSDisclaimer">Si vous disposez d\'un GPS, MyFlightbook peut utiliser votre position pour détecter les événements de vol tels que les décollages et les atterrissages, et enregistrer votre trajectoire de vol pour la sauvegarder avec votre vol. Il ne le fait que lorsque l\'application est active, ou en arrière-plan pendant qu\'un vol est "en cours" (c\'est à dire que l\'heure de démarrage moteur ou de debut de vol est définie mais pas celle de l'arrêt moteur). Aucune donnée n\'est enregistrée sauf si vous enregistrez votre trace, et cela n\'est disponible que pour vous, sauf si vous partagez explicitement vos données de vol. Notez qu\'Android n\'est pas un GPS aéronautique certifié, vous ne devez donc pas vous y fier en vol.</string>
+    <string name="lblGPSDisclaimer">Si vous disposez d\'un GPS, MyFlightbook peut utiliser votre position pour détecter les événements de vol tels que les décollages et les atterrissages, et enregistrer votre trajectoire de vol pour la sauvegarder avec votre vol. Il ne le fait que lorsque l\'application est active, ou en arrière-plan pendant qu\'un vol est "en cours" (c\'est à dire que l\'heure de démarrage moteur ou de debut de vol est définie mais pas celle de l\'arrêt moteur). Aucune donnée n\'est enregistrée sauf si vous enregistrez votre trace, et cela n\'est disponible que pour vous, sauf si vous partagez explicitement vos données de vol. Notez qu\'Android n\'est pas un GPS aéronautique certifié, vous ne devez donc pas vous y fier en vol.</string>
     <string name="lblGPSRationale">La détection automatique et l\'enregistrement nécessitent un accès en arrière-plan à votre position lorsqu\'un vol pourrait être en cours. Activer dans l\'application Paramètres?</string>
     <string name="lblAutoHobbs">Saisie automatique de la valeur de l\'horamètre à l\'arrivée</string>
     <string name="lblAutoTime">Saisie automatique du Temps Total</string>
