--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -159,7 +159,7 @@
     <string name="lblFollowFacebook">Facebook</string>
     <string name="lblFollowTwitter">Twitter</string>
     <string name="lblWarning1">USE IN FLIGHT COULD VIOLATE REGULATIONS AND BE A DISTRACTION.  YOU ARE RESPONSIBLE FOR ANY CONSEQUENCES OF DOING SO!  SEE 14 CFR 91.21 and 47 CFR 22.925 IN PARTICULAR</string>
-    <string name="lblWarning2">Use of this during flight could be a distraction and could violate regulations, including 14 CFR 91.21 and 47 CFR 22.925.\nYou are responsible for the consequences of any use of this software.</string>
+    <string name="lblWarning2">Use of this during flight could be a distraction and could violate regulations, including 14 CFR 91.21 and 47 CFR 22.925. You are responsible for the consequences of any use of this software.</string>
     <string name="lblGPSDisclaimer">If you have GPS, MyFlightbook can use your location to detect flight events like take-offs and landings, and record your flight track to save with your flight.  It does this only while the app is active, or in the background while a flight is "in progress" (has a defined engine or flight start, but no defined engine stop).  No data is saved unless you record your track, and that is only available to you unless you explicitly share your flight data. Note that Android is not a certified aviation-GPS, so you should not rely on it in flight.</string>
     <string name="lblGPSRationale">Autodetection and recording require background access to your location while a flight could be in progress.  Turn on in the Settings app?</string>
     <string name="lblAutoHobbs">Auto-fill ending Hobbs</string>
@@ -285,7 +285,6 @@
     <string name="txtError">Error</string>
     <string name="errMainDBFailure">Unable to create/copy main database - the app won\'t work!</string>
     <string name="errAirportDBFailure">Unable to create/copy airport database - nearest airport and mapping functionality won\'t work!</string>
-    <string name="errWarningTitle">Warning</string>
     <string name="errNoGPSTitle">No GPS</string>
     <string name="errCantUseGPS">Unable to start GPS Service: </string>
     <string name="errNoInternetNoSave">Cannot save flight - no access to Internet.</string>
