Fix issue #250 (indirectly #248) - add autofill  - Create synthetic telemetry, if appropriate.  - Cleaned up GPSSim's samples - in debug, don't fill memory with pointless array  - Move autototal and autohobbs (mostly) into LogbookEntry  - support autofill of ground instruction and cost-of-flight   - LogbookEntry adds "addOrSetPropertyValue" and "RemovePropertyWithID" method.  Property management is a disaster, but if I move away from SQL for this, should be able to clean up more.   - Added ability to detect file type and to parse a string (not just a URI).   - Updated copyright strings to 2022

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -164,7 +164,7 @@
     <string name="lblGPSRationale">La détection automatique et l\'enregistrement nécessitent un accès en arrière-plan à votre position lorsqu\'un vol pourrait être en cours. Activer dans l\'application Paramètres?</string>
     <string name="lblAutoHobbs">Saisie automatique de la valeur de l\'horamètre à l\'arrivée</string>
     <string name="lblAutoTime">Saisie automatique du Temps Total</string>
-    <string name="lblCopyright">© 2012&#8211;2021 MyFlightbook LLC</string>
+    <string name="lblCopyright">© 2012&#8211;2022 MyFlightbook LLC</string>
     <string name="lblCodeCredit">Une partie du code utilise la bibliothèque KSoap2 disponible à http://code.google.com/p/ksoap2-android/, publiée sous licence MIT à http://www.opensource.org/licenses/mit-license.php. Un grand merci !</string>
     <string name="lblContactMe">Contactez-nous</string>
     <string name="lblCleanup">Nettoyage</string>
@@ -393,6 +393,7 @@
     <string name="menuDeleteAircraftShort">Supprimer</string>
     <string name="menuChooseTemplate">Modèles pour ce vol</string>
     <string name="menuChooseTemplateShort">Modèles</string>
+    <string name="menuAutoFill">Remplissage automatique</string>
 
     <!-- Abbreviations -->
     <string name="abbrevNauticalMiles">NM</string>
