Issue #264: can't update progress with a generic mfbsoap; need the specific soap request.

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -241,6 +241,7 @@
     <string name="prgAircraft">Récupération des aéronefs…</string>
     <string name="prgSigningIn">S\'identifier…</string>
     <string name="prgCreatingAccount">Créer un compte…</string>
+    <string name="prgSavingFlight">Enregistrer le Vol</string>
     <string name="prgSavingFlights">Enregistrer le Vol %1$d sur %2$d</string>
     <string name="prgDeletingFlight">Suppression de vol</string>
     <string name="prgNewAircraft">Enregistrer l\'aéronef…</string>
