Update to make clear that cross-fill to instructor time also fills in PIC, use "Cross-fill" instead of "Autofill" to avoid confusion.

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -200,7 +200,7 @@
     <string name="lblRoleNone">Ne pas remplir automatiquement</string>
     <string name="lblRolePIC">Remplir la case PIC avec le temps total, si elle est vide</string>
     <string name="lblRoleSIC">Remplir la case SIC avec le temps total, si elle est vide</string>
-    <string name="lblRoleCFI">Remplir la case instruction avec le temps total, si elle est vide</string>
+    <string name="lblRoleCFI">Remplir la case instruction/PIC avec le temps total, si elle est vide</string>
     <string name="lblNotesHeader">Notes sur cet aéronef</string>
     <string name="lblPublicNotes">Notes publiques :</string>
     <string name="lblPrivateNotes">Notes privées :</string>
