Issue #278: get confirmation before modifying a signed flight

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -284,6 +284,7 @@
     <string name="lblAutoFillOptions">Critères d\'auto remplissage</string>
     <string name="lblConfirmImageDelete">Effacer cette image ? Ne peut être annulé</string>
     <string name="lblConfirmFlightDelete">Effacer ce vol ? Ne peut être annulé</string>
+    <string name="lblConfirmModifySignedFlight">Vous modifiez un vol signé ; cela pourrait invalider la signature. Êtes-vous sûr?</string>
 
     <string name="txtFlightQueued">Le vol a été sauvegardé pour un téléchargement ultérieur. Vous le trouverez dans Vols Récents.</string>
     <string name="txtRepeatFlightComplete">Le vol a été créé. Vous pouvez le modifier dans les vols récents.</string>
