--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -284,6 +284,7 @@
     <string name="lblAutoFillOptions">Auto-fill criteria</string>
     <string name="lblConfirmImageDelete">Delete this image?  This cannot be undone.</string>
     <string name="lblConfirmFlightDelete">Delete this flight?  This cannot be undone.</string>
+    <string name="lblConfirmModifySignedFlight">You are modifying a flight that has been signed; doing so may invalidate the signature.  Are you sure?</string>
 
     <string name="txtFlightQueued">Flight has been saved for uploading later.  You can find it in Recent flights.</string>
     <string name="txtRepeatFlightComplete">Flight has been created. You can edit it in recent flights.</string>
